tests/invalid/undefined_species_in_substrates.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UndefinedSpeciesSubstrates",
    "description": "Undefined species in reaction substrates"
  },
  "reaction_systems": {
    "ChemSystem": {
      "species": {
        "NO": {
          "units": "mol/mol",
          "default": 1e-09
        },
        "O3": {
          "units": "mol/mol",
          "default": 4e-08
        }
      },
      "parameters": {
        "k1": {
          "units": "cm^3/molec/s",
          "default": 1.8e-12
        }
      },
      "reactions": [
        {
          "id": "R1",
          "substrates": [
            {
              "species": "NO",
              "stoichiometry": 1
            },
            {
              "species": "undefined_species",
              "stoichiometry": 1
            }
          ],
          "products": [
            {
              "species": "NO2",
              "stoichiometry": 1
            }
          ],
          "rate": "k1"
        }
      ]
    }
  }
}
